# rocket-app-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  cargo.toml  database.sql  database.sqlite  database.sqlite-shm  database.sqlite-wal  docker-compose.yml  rocket.toml
.github/workflows/: prod.yml
migrations/2024-04-03-162925_create_users/: up.sql
migrations/2024-04-14-090948_create_users/: up.sql
migrations/2024-04-17-120230_create_habits/: down.sql  up.sql
migrations/2024-04-17-123809_create_tasks/: down.sql  up.sql
migrations/2024-04-17-124503_create_task_habit/: down.sql  up.sql
migrations/2024-04-20-103038_add_passhash_to_users/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs  schema.rs
src/myapi/: habit_api.rs  mod.rs  task_api.rs  user_api.rs
src/myapi/py_tests/: server_call_tests.py
src/services/: habit_services.rs  mod.rs  task_services.rs  user_services.rs
target 2/: .rustc_info.json
target 2/debug/.fingerprint/async-stream-11fcbe1bcddb0af8/: lib-async-stream  lib-async-stream.json
target 2/debug/.fingerprint/async-stream-778f44788107d426/: lib-async-stream  lib-async-stream.json
target 2/debug/.fingerprint/async-stream-impl-1dd155c936cdb21b/: lib-async-stream-impl  lib-async-stream-impl.json
target 2/debug/.fingerprint/async-trait-85a2f88228cff539/: lib-async-trait  lib-async-trait.json
target 2/debug/.fingerprint/atomic-01479e380c5af435/: lib-atomic  lib-atomic.json
target 2/debug/.fingerprint/atomic-9c10f50b142eecac/: lib-atomic  lib-atomic.json
target 2/debug/.fingerprint/autocfg-78e372619f261209/: lib-autocfg  (+1 more)
(+642 files in other folders)
