[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"
exclude = ["./py_tests"]

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"]}
serde =  {version = "1.0", features = ["derive"]}
serde_json = "1.0"
base64 = "0.20"
diesel ={ version = "2.1.5", features = ["sqlite", "r2d2", "chrono", "serde_json"]}
chrono = {version = "0.4", features = ["serde"]}
rocket_sync_db_pools ={ version = "0.1.0-rc", features = ["diesel_sqlite_pool"]}
jsonwebtoken = "7"
time = "0.3"
bcrypt = "0.15.1"
dotenv = "0.15.0"


